Added box plot code

--- a/config.yml
+++ b/config.yml
@@ -11,6 +11,7 @@ CONSTANTS:
     - ResponseTime
   DATASET_FOLDER: dataset
   LOGGING_FOLDER: log
+  GRAPH_FOLDER: graphs
 
 FILE_CONSTANTS:
   hm: 1
