--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,91 @@
 arrow==0.15.4
 astroid==2.3.3
+attrs==19.3.0
 autopep8==1.4.4
+backcall==0.1.0
+bleach==3.1.0
+cachecow==0.1.3
 certifi==2019.11.28
 chardet==3.0.4
 cycler==0.10.0
+decorator==4.4.1
+defusedxml==0.6.0
 entrypoints==0.3
 flake8==3.7.9
 future==0.18.2
+HeapDict==1.0.1
 idna==2.8
 importlib-metadata==0.23
+ipykernel==5.1.3
+ipython==7.11.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
 isort==4.3.21
 jedi==0.15.1
+Jinja2==2.10.3
 joblib==0.14.0
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==5.3.4
+jupyter-console==6.0.0
+jupyter-core==4.6.1
 kiwisolver==1.1.0
 lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
 matplotlib==3.1.1
 mccabe==0.6.1
+mistune==0.8.4
+mmh3==2.5.1
 more-itertools==7.2.0
+nbconvert==5.6.1
+nbformat==4.4.0
+notebook==6.0.2
 numpy==1.17.4
 pandas==0.25.3
+pandocfilters==1.4.2
 parso==0.5.1
+pexpect==4.7.0
+pickleshare==0.7.5
 plotly==4.3.0
 pluggy==0.13.1
+prometheus-client==0.7.1
+prompt-toolkit==2.0.10
 psutil==5.6.7
+ptyprocess==0.6.0
 pycodestyle==2.5.0
 pydocstyle==4.0.1
 pyflakes==2.1.1
+Pygments==2.5.2
 pylint==2.4.4
 pyparsing==2.4.5
+pyrsistent==0.15.6
 python-dateutil==2.8.1
 python-jsonrpc-server==0.3.0
 python-language-server==0.31.1
 pytz==2019.3
 PyYAML==5.1.2
+pyzmq==18.1.1
+qtconsole==4.6.0
 requests==2.22.0
 retrying==1.3.3
 rope==0.14.0
 scikit-learn==0.21.3
 scipy==1.3.2
 seaborn==0.9.0
+Send2Trash==1.5.0
 six==1.13.0
 sklearn==0.0
 snowballstemmer==2.0.0
+terminado==0.8.3
+testpath==0.4.4
+tornado==6.0.3
+traitlets==4.3.3
 typed-ast==1.4.0
 ujson==1.35
 urllib3==1.25.7
+wcwidth==0.1.7
+webencodings==0.5.1
+widgetsnbextension==3.5.1
 wrapt==1.11.2
 yapf==0.28.0
 zipp==0.6.0
