--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,11 @@ astroid==2.3.3
 attrs==19.3.0
 autopep8==1.4.4
 backcall==0.1.0
-bleach==3.1.0
+bleach==3.1.5
 cachecow==0.1.3
 certifi==2019.11.28
 chardet==3.0.4
+conda==4.3.16
 cycler==0.10.0
 decorator==4.4.1
 defusedxml==0.6.0
@@ -16,11 +17,17 @@ future==0.18.2
 HeapDict==1.0.1
 idna==2.8
 importlib-metadata==0.23
+ipykernel==5.1.3
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
 isort==4.3.21
 jedi==0.15.1
 Jinja2==2.10.3
 joblib==0.14.0
 jsonschema==3.2.0
+jupyter-client==5.3.4
+jupyter-console==6.0.0
+jupyter-core==4.6.1
 kiwisolver==1.1.0
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
@@ -32,7 +39,10 @@ more-itertools==7.2.0
 nbconvert==5.6.1
 nbformat==4.4.0
 notebook==6.0.2
+numexpr==2.7.1
 numpy==1.17.4
+orca==1.5.3
+packaging==20.4
 pandas==0.25.3
 pandocfilters==1.4.2
 parso==0.5.1
@@ -45,10 +55,12 @@ prompt-toolkit==2.0.10
 psutil==5.6.7
 ptyprocess==0.6.0
 pycodestyle==2.5.0
+pycosat==0.6.3
 pydocstyle==4.0.1
 pyflakes==2.1.1
 Pygments==2.5.2
 pylint==2.4.4
+PyMimircache==0.0.2.103
 pyparsing==2.4.5
 pyrsistent==0.15.6
 python-dateutil==2.8.1
@@ -61,6 +73,8 @@ qtconsole==4.6.0
 requests==2.22.0
 retrying==1.3.3
 rope==0.14.0
+ruamel.yaml==0.16.5
+ruamel.yaml.clib==0.2.0
 scikit-learn==0.21.3
 scipy==1.3.2
 seaborn==0.9.0
@@ -68,8 +82,10 @@ Send2Trash==1.5.0
 six==1.13.0
 sklearn==0.0
 snowballstemmer==2.0.0
+tables==3.6.1
 terminado==0.8.3
 testpath==0.4.4
+toolz==0.10.0
 tornado==6.0.3
 traitlets==4.3.3
 typed-ast==1.4.0
