Added: Splitting trace into per day basis
Split the trace into per day chunks for analysis.

--- a/cpb.yml
+++ b/cpb.yml
@@ -3,7 +3,9 @@ CONSTANTS:
   LOGGING_FOLDER: log
   GRAPH_FOLDER: graphs
   RESULTS_FOLDER: results
+  DAY_MS: 86400000000
 
 HEADERS:
   - BLOCK_NUMBER
   - READ_WRITE
+  - ACCESS_TIME
